--- a/index.html
+++ b/index.html
@@ -87,19 +87,99 @@
         <!-- riga 6 -->
         <div class="row">
             <div class="col-xs-6">
-
+                <div class="container-nasted">
+                    <div class="row">
+                        <div class="col-xs-2">nasted 2</div>
+                        <div class="col-xs-2">nasted 2</div>
+                        <div class="col-xs-8">nasted 8</div>
+                    </div>
+                </div>
             </div>
             <div class="col-xs-6">
-                
+                <div class="container-nasted">
+                    <div class="row">
+                        <div class="col-xs-6">nasted 6</div>
+                        <div class="col-xs-6">nasted 6</div>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- /riga 6 -->
     </div>
-    <div class="container-fluid">
-
+    <div class="container-fluid" id="margine">
+        <div class="row">
+            <div class="col-xs-12"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-1"></div>
+            <div class="col-xs-11"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-2"></div>
+            <div class="col-xs-10"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-3"></div>
+            <div class="col-xs-9"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-4"></div>
+            <div class="col-xs-8"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-5"></div>
+            <div class="col-xs-7"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-6"></div>
+            <div class="col-xs-6"></div>
+        </div>
     </div>
-    <div class="container">
-
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-offset-11"></div>
+            <div class="col-xs-1"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-10"></div>
+            <div class="col-xs-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-9"></div>
+            <div class="col-xs-3"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-8"></div>
+            <div class="col-xs-4"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-7"></div>
+            <div class="col-xs-5"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-6"></div>
+            <div class="col-xs-6"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-5"></div>
+            <div class="col-xs-7"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-4"></div>
+            <div class="col-xs-8"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-3"></div>
+            <div class="col-xs-9"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-2"></div>
+            <div class="col-xs-10"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-1"></div>
+            <div class="col-xs-11"></div>
+        </div>
     </div>
 </body>
 </html>
